chore: simplify release title to always be 'Latest Events'

--- a/.github/workflows/ics_to_json.yml
+++ b/.github/workflows/ics_to_json.yml
@@ -95,7 +95,7 @@ jobs:
           set -euo pipefail
           OUTPUT_ASSET="${OUTPUT_FILE:-events.json}"
           TAG="latest"
-          TITLE="Latest Events ${{ github.event_name == 'workflow_dispatch' && '(Manual)' || '' }}"
+          TITLE="Latest Events"
           BODY="Automated update of events feed. ICS_SHA256:${{ steps.check_change.outputs.hash }}"
 
           # Overwrite existing 'latest' release
